--- a/style.css
+++ b/style.css
@@ -33,13 +33,16 @@
 }
 
 button {
-    width: 48px;
     height: 46px;
     background-color: aquamarine;
     border: 1px solid green;
     flex: 1;
 }
 
+button:hover {
+    background-color: lightseagreen;
+}
+
 button.zero {
-    flex: 3;
+    flex: 2;
 }
